# gta-reversed-android

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: androidBuild.yml
android/: .gitignore  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
android/app/: build.gradle  google-services.json  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/audio/: audio_data.xml
android/app/src/main/assets/xml/: app_data.xml  audio_data.xml  car_data.xml  car_data_iPhone.xml  color_palete.xml  item_data.xml  part_data.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/src/: CMakeLists.txt  Hooks.cpp  InjectReversedClasses.cpp  StdInc.cpp  StdInc.h  main.cpp  main.h  reGTA.cpp  reGTA.h
android/app/src/main/cpp/src/Code/FrontEnd/: WidgetButtonVCShoot .cpp
android/app/src/main/cpp/src/Code/MSVC PC files/: msvc_pch_emu.h
android/app/src/main/java/com/gta/launcher/: MainActivity.java
android/app/src/main/java/com/gta/reversed/: GTASA.java
android/app/src/main/java/com/nvidia/devtech/: NvAPKFile.java  NvAPKFileHelper.java  NvEventQueueActivity.java  NvUtil.java
android/app/src/main/java/com/regta/core/: GTASA.java  REGTA.java  REGTA.kt
android/app/src/main/java/com/regta/launcher/: MainActivity.java
android/app/src/main/java/com/wardrumstudios/utils/: WarBase.java  WarBilling.java  WarGamepad.java  WarHttp.java  WarMedia.java
android/app/src/main/res/layout/: loadingscreen.xml
android/app/src/main/res/values/: styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: README.md
idb/arm64-v8a/: libGTASA.so.i64
idb/armeabi-v7a/: libGTASA.so.i64
